--- a/index.html
+++ b/index.html
@@ -2,153 +2,155 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>Global Art – Luxury Drawing Studio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Global Art</title>
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
-<!-- CSS -->
 <style>
-:root {
-    --bg-dark: #0b1220;
-    --bg-light: #fdf6e3;
-    --text-dark: #fdf6e3;
-    --text-light: #0b1220;
+:root{
+  --bg:#0e0e11;
+  --card:#16161d;
+  --text:#eaeaea;
+  --muted:#a1a1aa;
+}
+body.light{
+  --bg:#f5f5f5;
+  --card:#ffffff;
+  --text:#111;
+  --muted:#555;
 }
 
-body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    background: var(--bg-dark);
-    color: var(--text-dark);
-    scroll-behavior: smooth;
-    transition: all 0.4s ease;
+*{margin:0;padding:0;box-sizing:border-box;}
+html{scroll-behavior:smooth;}
+body{
+  background:var(--bg);
+  color:var(--text);
+  font-family:'Poppins',sans-serif;
+  transition:0.3s;
 }
 
-h1 {
-    font-family: 'Playfair Display', serif;
-    text-align: center;
-    margin: 40px 0 20px;
-    font-size: 3rem;
+/* Header */
+header{
+  padding:30px 20px;
+  text-align:center;
+}
+header h1{
+  font-family:'Playfair Display',serif;
+  font-size:36px;
+}
+header p{color:var(--muted);}
+
+/* Toggle */
+.toggle{
+  position:fixed;
+  top:20px;
+  right:20px;
+  background:var(--card);
+  padding:8px 14px;
+  border-radius:20px;
+  cursor:pointer;
+  font-size:14px;
 }
 
-.container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 20px;
-    max-width: 1200px;
-    margin: auto;
+/* Gallery */
+.gallery{
+  padding:40px 20px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+}
+.card{
+  background:var(--card);
+  border-radius:14px;
+  overflow:hidden;
+  animation:fade 0.8s ease;
+}
+.card img{
+  width:100%;
+  display:block;
+}
+.card .info{
+  padding:14px;
+}
+.card h3{
+  font-family:'Playfair Display',serif;
+}
+.card a{
+  display:inline-block;
+  margin-top:10px;
+  color:#25d366;
+  text-decoration:none;
+  font-weight:500;
 }
 
-img {
-    width: 100%;
-    border-radius: 15px;
-    transition: transform 0.5s, box-shadow 0.5s;
-    opacity: 0;
-    transform: translateY(20px);
+/* Footer */
+footer{
+  text-align:center;
+  padding:30px 20px;
+  color:var(--muted);
 }
 
-img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-}
-
-/* Light Mode */
-.light-mode {
-    --bg-dark: #fdf6e3;
-    --bg-light: #0b1220;
-    --text-dark: #0b1220;
-    --text-light: #fdf6e3;
-}
-
-/* Light/Dark toggle button */
-.toggle-btn {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    background: #f39c12;
-    color: #fff;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 10px;
-    cursor: pointer;
-    font-weight: bold;
-    z-index: 100;
-    transition: 0.3s;
-}
-
-.toggle-btn:hover {
-    background: #e67e22;
-}
-
-/* WhatsApp button */
-.whatsapp-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: #25D366;
-    color: #fff;
-    border: none;
-    padding: 15px 20px;
-    border-radius: 50px;
-    font-size: 1rem;
-    cursor: pointer;
-    text-decoration: none;
-    font-weight: bold;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    transition: 0.3s;
-}
-
-.whatsapp-btn:hover {
-    background: #1ebe57;
-}
-
-/* Fade-in animation */
-img.show {
-    opacity: 1;
-    transform: translateY(0);
+@keyframes fade{
+  from{opacity:0;transform:translateY(20px);}
+  to{opacity:1;transform:translateY(0);}
 }
 </style>
 </head>
+
 <body>
 
-<!-- Light/Dark Mode Toggle -->
-<button class="toggle-btn" onclick="toggleMode()">Light / Dark</button>
+<div class="toggle" onclick="toggleMode()">Light / Dark</div>
 
-<h1>Global Art Gallery</h1>
+<header>
+  <h1>Global Art</h1>
+  <p>Luxury Hand-Drawn Artwork</p>
+</header>
 
-<div class="container">
-    <img src="images/art1.jpg" alt="Art 1">
-    <img src="images/art2.jpg" alt="Art 2">
-    <img src="images/art3.jpg" alt="Art 3">
-    <img src="images/art4.jpg" alt="Art 4">
-    <img src="images/art5.jpg" alt="Art 5">
-    <img src="images/art6.jpg" alt="Art 6">
-    <img src="images/art7.jpg" alt="Art 7">
-</div>
+<section class="gallery">
+  <div class="card">
+    <img src="images/art1.jpg">
+    <div class="info">
+      <h3>Artwork 1</h3>
+      <a href="https://wa.me/917378272741" target="_blank">Buy on WhatsApp</a>
+    </div>
+  </div>
 
-<!-- WhatsApp Buy Button -->
-<a class="whatsapp-btn" href="https://wa.me/7378272741" target="_blank">Buy on WhatsApp</a>
+  <div class="card">
+    <img src="images/art2.jpg">
+    <div class="info">
+      <h3>Artwork 2</h3>
+      <a href="https://wa.me/917378272741" target="_blank">Buy on WhatsApp</a>
+    </div>
+  </div>
 
-<!-- JavaScript -->
+  <div class="card">
+    <img src="images/art3.jpg">
+    <div class="info">
+      <h3>Artwork 3</h3>
+      <a href="https://wa.me/917378272741" target="_blank">Buy on WhatsApp</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="images/art4.jpg">
+    <div class="info">
+      <h3>Artwork 4</h3>
+      <a href="https://wa.me/917378272741" target="_blank">Buy on WhatsApp</a>
+    </div>
+  </div>
+</section>
+
+<footer>
+  Instagram: <a href="https://instagram.com/mystivated66" target="_blank">@mystivated</a>
+</footer>
+
 <script>
-// Light/Dark Mode Toggle
-function toggleMode() {
-    document.body.classList.toggle('light-mode');
+function toggleMode(){
+  document.body.classList.toggle("light");
 }
-
-// Fade-in Images on Load
-window.addEventListener('load', () => {
-    const images = document.querySelectorAll('img');
-    images.forEach((img, index) => {
-        setTimeout(() => {
-            img.classList.add('show');
-        }, index * 200); // staggered animation
-    });
-});
 </script>
 
 </body>
-</html>
+    </html>
